--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,12 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "your-app:build",
+            "allowedHosts": [
+              "localhost"
+            ]
+          },
           "configurations": {
             "production": {
               "browserTarget": "01_Angular_empty:build:production"
@@ -94,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "8406979c-a35f-4a01-a713-6994434303c4"
   }
 }
